<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1A000000"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imgTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="10sp"
        android:layout_marginRight="20sp"
        android:layout_weight="1"
        android:contentDescription="@string/img_titulo"
        app:srcCompat="@drawable/texto_titulo1" />

    <ImageView
        android:id="@+id/img_figuras"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginBottom="0px"
        android:layout_weight="1"
        android:contentDescription="@string/img_varias"
        app:srcCompat="@drawable/tela_inicial" />

    <TextView
        android:id="@+id/txtNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="20sp"
        android:layout_marginRight="10sp"
        android:layout_weight="1"
        android:paddingLeft="20sp"
        android:paddingRight="20sp"
        android:text="@string/txt_nome"
        android:textColor="#000000"
        android:textSize="10pt" />

    <EditText
        android:id="@+id/nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Edit_nome"
        android:textColorHint="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="normal" />

    <Button
        android:id="@+id/btn_tela"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50sp"
        android:layout_marginTop="10sp"
        android:layout_marginRight="50sp"
        android:layout_weight="1"
        android:background="#3F51B5"
        android:paddingLeft="40sp"
        android:paddingRight="40sp"
        android:text="@string/btn_avancar"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold" />
</LinearLayout>