<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1A000000"
    android:orientation="vertical"
    tools:context=".Tela2">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="82dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10sp">

            <TextView
                android:id="@+id/nome_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:text="@string/txt_toque"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/img_topo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                app:srcCompat="@drawable/circulo_p" />

            <TextView
                android:id="@+id/valor_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_valor_img"
                android:textColor="#000000"
                android:textSize="40sp"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="355dp">

        <TableRow
            android:id="@+id/grupo1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/circulo_m" />

            <ImageButton
                android:id="@+id/btn2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/quadrado_m" />

            <ImageButton
                android:id="@+id/btn3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/retangulo_m" />
        </TableRow>

        <TableRow
            android:id="@+id/grupo2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="20sp">

            <ImageButton
                android:id="@+id/btn4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/quadrado_m" />

            <ImageButton
                android:id="@+id/btn5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/triangulo_m" />

            <ImageButton
                android:id="@+id/btn6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/circulo_m" />
        </TableRow>

        <TableRow
            android:id="@+id/grupo3"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/btn7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/retangulo_m" />

            <ImageButton
                android:id="@+id/btn8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/circulo_m" />

            <ImageButton
                android:id="@+id/btn9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/triangulo_m" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/btn_avancar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50sp"
        android:layout_marginRight="50sp"
        android:background="#3F51B5"
        android:text="@string/btn_avanca"
        android:textColor="#FAFAFA"
        android:textSize="10pt"
        android:textStyle="bold" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10sp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_base"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:contentDescription="@string/img_baixo"
                app:srcCompat="@drawable/circulo_p" />

            <TextView
                android:id="@+id/num01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_num01"
                android:textColor="#000000"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                android:layout_marginRight="15sp"
                android:text="@string/txt_soma"
                android:textColor="#000096"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/num02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_num02"
                android:textColor="#000000"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                android:layout_marginRight="15sp"
                android:text="@string/txt_soma1"
                android:textColor="#000096"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/num03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_num03"
                android:textColor="#000000"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                android:layout_marginRight="15sp"
                android:text="@string/txt_igual"
                android:textColor="#000096"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/resultado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_resultado"
                android:textColor="#3F51B5"
                android:textSize="40sp"
                android:textStyle="bold" />

        </TableRow>

    </TableLayout>

</LinearLayout>